# lsystem_generator

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  lsystem_generator.py  pyproject.toml  requirements-dev.txt  test_lsystem_generator.py
.claude/agents/: python-code-reviewer.md
.github/workflows/: black.yml  ci.yml  codeql.yml  mypy.yml  ruff.yml
doc/: CONTEXT_INJECTION.md
example/: binary_tree.json  cesaro_curve.json  dragon_curve.json  fractal_tree.json  gosper_curve.json  greek_key_meander.json  hilbert_curve.json  hilbert_curve_hi.json  just_another_example.json  koch.json  koch_quadratic_curve.json  koch_snowflake.json  labyrinth_blocks.json  levy_c_curve.json  moore_curve.json  moore_curve_hi.json  peano_curve.json  peano_curve_hi.json  pentaplexity.json  plant_a.json  plant_b.json  plant_c.json  sierpinski_arrowhead.json  tiny_plant.json
