[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["."]

# Optional: tell pytest what file naming patterns to consider tests
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["lsystem_generator"]  # <-- change to your actual package/module name if different
omit = [
  "tests/*",
  "test_*.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.coverage.xml]
output = "coverage.xml"

[project]
name = "lsystem_generator"
version = "0.1.0"
description = "Streaming L-system renderer that writes SVG output"
requires-python = ">=3.11"
authors = [{ name = "p3tri3" }]
license = { text = "MIT" }
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
show_error_codes = true
exclude = ["__pycache__"]
